# candido

./: README.md  candido002.mid  candido003.mid  candido004.mid  candido005.mid  candido006.mid  candido006b.mid  candido006c.mid  candido006d.mid  candido007.mid  candido008.mid  candido009.mid  candido010.mid  drum_pattern.mid  pyproject.toml  run.py
