[tool.poetry]
name = "gpt4-candido"
version = "0.1.0"
description = ""
authors = ["Christopher France <christopherbfrance@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt4_candido"}]

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
